--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,13 @@ version: '3.8'
 
 services:
   api:
-    build: .
+    image: maven:3.9.6-eclipse-temurin-17
+    working_dir: /app
+    volumes:
+      - ./:/app
+      - ~/.m2:/root/.m2
     ports:
       - "8080:8080"
+    command: mvn spring-boot:run
     environment:
       - SERVER_PORT=8080
