--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,16 @@ services:
     command: mvn spring-boot:run
     environment:
       - SERVER_PORT=8080
+      - SPRING_DATA_MONGODB_URI=mongodb://mongo:27017/maturity_db
+    depends_on:
+      - mongo
+
+  mongo:
+    image: mongo:latest
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo_data:/data/db
+
+volumes:
+  mongo_data:
